# deployer

./: .env.example  .gitignore  .secrets.baseline  CLAUDE.md  LICENSE  Makefile  README.md  main.tf  outputs.tf  pyproject.toml  variables.tf
docs/: BOOTSTRAP.md  CONFIG-REFERENCE.md  DEPLOYMENT-GUIDE.md  GETTING-STARTED.md  OPERATIONS.md  REVIEW-PLAN.md  TROUBLESHOOTING.md
docs/background/: ARCHITECTURE.md  DECISIONS.md  DESIGN.md  MODULES.md  SUPPORTED-ARCHITECTURES.md
docs/frameworks/: django.md  generic.md
docs/internal/: ARCHITECTURE.md  DECISIONS.md  HOWTO-PUBLISH.md  HOWTO-SIMPLIFY.md  PERFORMANCE-TESTING.md  PLAN-ARCHIVE.md  PLAN.md  PYSMELLY.md  SIMILAR-TOOLS.md  SOMEDAY-MAYBE.md  SUPPORTED-ARCHITECTURES.md  WHATIF-AZURE.md
docs/internal/removed-features/: alb-access-logs.md  autoscale-module.md  cdn-module.md  compute-optimizer.md  speed-test.md
docs/modules/: cdn.md  secrets.md
docs/operations/: MULTIPLE-ACCOUNTS.md  PRODUCTION.md  README.md  SHARED-ENVIRONMENTS.md  STAGING.md
docs/resources/: README.md  cache.md  database.md  storage.md
docs/scenarios/: ci-cd.md  passive-deployer.md  rails.md
docs/tofu-modules/: README.md  acm.md  alb.md  app-in-shared-env.md  bootstrap.md  ci-role.md  ci.md  cloudfront-alb.md  cloudwatch-alarms.md  cognito-shared.md  cognito.md  cost-budget.md  db-on-shared-rds.md  db-secrets.md  db-users.md  ecr-notifications.md  ecr.md  ecs-cluster.md  ecs-service.md  elasticache.md  rds.md  route53.md  s3.md  shared-infrastructure.md  staging-scheduler.md  vpc.md  waf.md
environments/: deployer.tf
modules/acm/: main.tf
modules/alb/: listeners.tf  locals.tf  main.tf  outputs.tf  security.tf  variables.tf
modules/app-in-shared-env/: alb.tf  iam.tf  main.tf  outputs.tf  variables.tf
modules/bootstrap/: README.md  iam-app-deploy.tf  iam-boundary.tf  iam-cognito-admin.tf  iam-infra-admin.tf  iam-trust.tf  iam-user-policy.tf  main.tf  outputs.tf  s3.tf  variables.tf
modules/ci/: main.tf  outputs.tf  variables.tf
modules/ci-role/: main.tf  outputs.tf  variables.tf
modules/cloudfront-alb/: certificate.tf  locals.tf  main.tf  outputs.tf  s3.tf  variables.tf
modules/cloudwatch-alarms/: main.tf  outputs.tf  variables.tf
modules/cognito/: main.tf
modules/cognito-shared/: main.tf
modules/cost-budget/: main.tf  variables.tf
modules/db-on-shared-rds/: main.tf  outputs.tf
modules/db-on-shared-rds/lambda/: index.py
modules/db-secrets/: main.tf
modules/db-users/: main.tf  outputs.tf
modules/db-users/lambda/: index.py
modules/ecr/: main.tf
modules/ecr-notifications/: main.tf  outputs.tf  variables.tf
modules/ecs-cluster/: main.tf
modules/ecs-service/: iam.tf  locals.tf  main.tf  outputs.tf  variables.tf
modules/elasticache/: main.tf
modules/rds/: main.tf
modules/route53/: main.tf
modules/s3/: main.tf
modules/shared-infrastructure/: main.tf  outputs.tf  s3.tf  variables.tf
modules/staging-scheduler/: main.tf  variables.tf
modules/staging-scheduler/lambda/: handler.py
modules/vpc/: main.tf
modules/waf/: locals.tf  logging.tf  main.tf  outputs.tf  variables.tf
src/deployer/: __init__.py  timing.py
src/deployer/aws/: __init__.py  cloudwatch.py  cognito.py  ecs.py  rds.py  ssm.py
src/deployer/cli/: __init__.py  ci_deploy.py
src/deployer/config/: __init__.py  compose.py  deploy_config.py  toml.py
src/deployer/core/: __init__.py  audit.py  cognito.py  config.py  deploy.py  ssm_secrets.py
src/deployer/deploy/: __init__.py  context.py  deployer.py  extensions.py  images.py  migrations.py  preflight.py  service.py  task_definition.py  validation.py
src/deployer/emergency/: __init__.py  checkpoint.py  ecs.py  rds.py
src/deployer/init/: __init__.py  bootstrap.py  deploy_toml.py  environment.py  framework.py  setup_profiles.py  template.py  verify.py
src/deployer/modules/: __init__.py  base.py  cache.py  database.py  secrets.py  storage.py
src/deployer/utils/: __init__.py  aws_profile.py  cli.py  colors.py  constants.py  datetime.py  environment.py  links.py  logging.py  subprocess.py
templates/bootstrap/: cognito.auto.tfvars.example  import-existing.sh.example  main-cognito.tf.example  main.tf.example  terraform.tfvars.example
templates/shared-app-production/: config.toml.example  main.tf.example  terraform.tfvars.example
templates/shared-app-staging/: README.md.example  config.toml.example  main.tf.example  terraform.tfvars.example
templates/shared-infra-production/: README.md.example  main.tf.example  terraform.tfvars.example
templates/shared-infra-staging/: README.md.example  main.tf.example  terraform.tfvars.example
templates/standalone-production/: README.md.example  config.toml.example  services.auto.tfvars.example
templates/standalone-staging/: config.toml.example  main.tf.example  services.auto.tfvars.example  terraform.tfvars.example
tests/: conftest.py
tests/fixtures/: sample_deploy.toml  sample_docker_compose.yml
tests/unit/: test_audit.py  test_aws_profile.py  test_bin_scripts.py  test_bootstrap.py  test_ci_deploy.py  test_config.py  test_core.py  test_deploy.py  test_ecs.py  test_extensions.py  test_images.py  test_init.py  test_modules.py  test_preflight.py  test_setup_profiles.py  test_utils.py  test_validation.py  test_verify.py
