[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deployer"
version = "0.1.0"
description = "OpenTofu infrastructure and deployment tooling for AWS ECS applications"
license = { text = "BSD-3-Clause" }
authors = [{ name = "University of Washington" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "dacite>=1.9.2",
    "pyyaml>=6.0",
    "tomli_w>=1.0",
]

[project.scripts]
ci-deploy = "deployer.cli.ci_deploy:main"

[dependency-groups]
dev = [
    # Formatting (local only)
    "black>=24.0",
    "isort>=5.13",
    "ruff",
    # Security scanning (local only)
    "bandit>=1.7",
    "pip-audit>=2.6",
    "checkov>=3.0",
    # Code analysis
    "vulture",
    "radon",
]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "moto[ecs,ecr,rds,cloudwatch]>=5.0",
]

[tool.uv]
# Don't auto-include dev dependencies in uv run
default-groups = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/deployer"]
branch = true

[tool.coverage.report]
# Integration-heavy CLI: most subsystem code is boto3/subprocess wrappers that
# require real AWS credentials. 25% covers the testable business logic layer.
fail_under = 25
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["modules/db-users/lambda", "modules/db-on-shared-rds/lambda"]

[tool.ruff.lint]
# Focused rule selection for deployer.
# Excluded categories with rationale (per claude-meta lessons learned):
# - FBT: boolean-trap. Click CLI options use bool flags throughout bin/ scripts;
#   the pattern is established and not a real source of bugs here.
# - TRY: tryceratops. Stylistic suggestions about exception structure that
#   don't add value for this codebase's exception handling style.
# - PLR: pylint refactor / complexity counters. We use mccabe (C90) for
#   complexity instead and avoid the noisy magic-value / too-many-* rules.
select = [
    "A",      # flake8-builtins (shadowing builtins)
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear (real bugs)
    "BLE",    # flake8-blind-except
    "C90",    # mccabe complexity
    "E",      # pycodestyle errors
    "ERA",    # eradicate (commented-out code)
    "F",      # pyflakes (real bugs: F401, F841, F821, etc.)
    "N",      # pep8-naming
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print
    "W",      # pycodestyle warnings
    # Selected pylint rules (avoid the complexity-counting ones in PLR)
    "PLC",    # convention
    "PLE",    # error
    "PLW",    # warning
]

[tool.ruff.lint.mccabe]
# Deployer has inherently complex AWS orchestration workflows.
# 15 avoids noise on functions like deploy_service(), run_preflight_checks().
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert in tests
    "ARG001",  # unused args in mock callbacks
    "ARG002",  # unused fixture args
    "PLC0415", # imports inside test functions (lazy/conditional)
    "PLC2701", # private name imports
    "S105",    # hardcoded password (test fixtures)
    "S106",    # hardcoded password kwarg
    "S110",    # try/except/pass OK in test setup/teardown
    "SIM105",  # contextlib.suppress not always clearer in test scaffolding
    "SIM117",  # nested `with` OK in tests for clarity
    "T20",     # print in tests OK
]
"bin/*" = [
    "BLE001",  # CLI scripts catch broad exceptions for graceful error messages
    "E501",    # long Click help strings and f-strings; black is line-length authority
    "PLC0415", # lazy imports inside Click commands for fast CLI startup
    "S603",    # subprocess calls to external tools (tofu, docker, aws) expected
    "S607",    # partial executable paths for CLI tools (tofu, docker) expected
    "T20",     # print is the primary output mechanism for CLI scripts
]
"src/*" = [
    "S603",    # subprocess calls to external tools (tofu, docker, aws) expected
    "S607",    # partial executable paths for CLI tools (tofu, docker) expected
    "T20",     # deployer library outputs status via print (log(), log_ok(), etc.)
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]

[tool.pysmelly]
# CLI cmd_* functions are dispatched by Click — public naming is conventional
# AWS_REGION module-level constant is intentional
# Config dict keys ("infrastructure", "services") are inherent to the data format
skip = ["internal-only", "shared-mutable-module-state", "scattered-constants"]
# Test setup boilerplate dominates duplicate-blocks findings
exclude = ["tests/"]
